<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:layout_margin="@dimen/_5sdp"
    android:gravity="center"
    android:orientation="vertical">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/bg_button"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warning"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16dp"/>
    </RelativeLayout>



    <TextView
        android:id="@+id/text_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:textColor="@color/colorBlueText"
        android:layout_marginTop="20dp"
        android:text="@string/sure_to_reset"
        android:textSize="14sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_cancel_reset"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_height="42dp"
            android:background="@drawable/bg_button"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:text="@string/action_reset" />

    </LinearLayout>

</LinearLayout>