<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_Scanner"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:elevation="@dimen/_6sdp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>


    <ImageView
        android:layout_width="match_parent"
        android:layout_below="@+id/toolbar_Scanner"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:src="@drawable/rahbarlogo1"
        android:layout_height="@dimen/_150sdp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtQR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/edt_shape"
            android:gravity="center"
            android:layoutDirection="ltr"
            android:hint="@string/enterBarcode"
            android:inputType="text"
            android:padding="@dimen/_10sdp"
            android:paddingBottom="@dimen/_3sdp"
            android:textColor="@color/colorTextDark"
            android:textColorHint="@color/colorText"
            android:textDirection="rtl"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_below="@+id/edtQR"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rlScanner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/_25sdp">

                <Button
                    android:id="@+id/btnScanner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/bg_button"
                    android:foreground="?selectableItemBackground"
                    android:text="@string/scanner"
                    android:textColor="#fff"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlButtons"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="@dimen/_25sdp">

                <Button
                    android:id="@+id/btRegisterScannerResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/bg_button"
                    android:foreground="?selectableItemBackground"
                    android:text="@string/register"
                    android:textColor="#fff"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/pbRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/bg_button"
                    android:indeterminateTint="@color/colorAccent"
                    android:theme="@style/ProgressBar"
                    android:visibility="gone" />

            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>




</RelativeLayout>