<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/ivIcon"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_80sdp"
        android:src="@drawable/rahbarbazaar_logo"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_70sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_above="@+id/llLogin">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_2sdp"
                android:text="ایمیل"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />


        </RelativeLayout>


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/bg_input_layout"
            android:drawableEnd="@drawable/ic_email"
            android:gravity="center"
            android:hint="@string/enterEmail"
            android:inputType="textEmailAddress"
            android:maxLength="40"
            android:padding="10dp"
            android:paddingBottom="5dp"
            android:textColor="@color/colorTextDark"
            android:textColorHint="@color/colorText"
            android:textDirection="ltr"
            android:textSize="@dimen/_12ssp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_above="@+id/llLogin">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/password"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold" />


        </RelativeLayout>


        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/bg_input_layout"
            android:drawableEnd="@drawable/ic_vpn_key_24dp"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="text"
            android:maxLength="50"
            android:padding="10dp"
            android:paddingBottom="5dp"
            android:textColor="@color/colorTextDark"
            android:textColorHint="@color/colorText"
            android:textDirection="ltr"
            android:textSize="@dimen/_12ssp" />




        <RelativeLayout
            android:id="@+id/rlButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5sdp"
            android:layout_alignParentStart="true"
            android:layout_marginTop="@dimen/_25sdp">

            <Button
                android:id="@+id/btLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/bg_button"
                android:foreground="?selectableItemBackground"
                android:text="@string/enter"
                android:textColor="#fff"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/pbLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/bg_button"
                android:indeterminateTint="@color/colorAccent"
                android:theme="@style/ProgressBar"
                android:visibility="gone" />

        </RelativeLayout>

    </LinearLayout>




</RelativeLayout>